--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,8 @@ spring.data.mongodb.database=token-management-system-db
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 
-sprngsec.app.jwtSecret=myAppKey
-sprngsec.app.jwtExpiration=86400000
+logging.level.root=INFO
+logging.level.com.example=TRACE
+
+#sprngsec.app.jwtSecret=myAppKey
+#sprngsec.app.jwtExpiration=86400000
